--- a/society360_guard/pubspec.yaml
+++ b/society360_guard/pubspec.yaml
@@ -54,6 +54,16 @@ dependencies:
   # HTTP Client
   dio: ^5.4.0
 
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_messaging: ^15.1.5
+
+  # Socket.io
+  socket_io_client: ^2.0.3+1
+
+  # Local Notifications
+  flutter_local_notifications: ^18.0.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
