--- a/society360_resident/pubspec.yaml
+++ b/society360_resident/pubspec.yaml
@@ -60,6 +60,9 @@ dependencies:
   qr_flutter: ^4.1.0
   mobile_scanner: ^6.0.0
 
+  # Sharing
+  share_plus: ^10.1.2
+
   # HTTP Client
   dio: ^5.4.0
 
@@ -69,6 +72,7 @@ dependencies:
   # Utilities
   intl: ^0.20.2
   uuid: ^4.5.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
