--- a/society360_backend/.env.example
+++ b/society360_backend/.env.example
@@ -24,3 +24,13 @@ RATE_LIMIT_MAX_REQUESTS=100
 
 # Logging
 LOG_LEVEL=info
+
+# JWT Configuration (Admin Portal)
+JWT_SECRET=your-super-secret-jwt-key-change-in-production
+JWT_EXPIRES_IN=15m
+JWT_REFRESH_EXPIRES_IN=7d
+
+# Initial Super Admin (for seeding)
+SUPER_ADMIN_EMAIL=admin@society360.com
+SUPER_ADMIN_PASSWORD=Admin@123
+SUPER_ADMIN_NAME=Super Admin
