--- a/society360_backend/package.json
+++ b/society360_backend/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "db:migrate": "psql $DATABASE_URL -f migrations/004_final_postgres_schema.sql"
+    "db:migrate": "psql $DATABASE_URL -f migrations/004_final_postgres_schema.sql",
+    "db:migrate:admin": "psql $DATABASE_URL -f migrations/008_notices_complaints_admin_auth.sql",
+    "seed:admin": "node src/scripts/seedSuperAdmin.js"
   },
   "keywords": [
     "visitor-management",
@@ -27,7 +29,10 @@
     "dotenv": "^16.4.1",
     "winston": "^3.11.0",
     "express-rate-limit": "^7.1.5",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "bcryptjs": "^2.4.3",
+    "crypto": "^1.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
